--- a/language/TODO
+++ b/language/TODO
@@ -1,24 +1,19 @@
-merge back to master
-
 Move NockFunction to data
 Move Axis to data
+Use AxisMap in SourceMappedNoun
+pass FragmentNode in to PullNode
 
-Exceptions
-  NockException -- thrown only from truffle nodes
-  Exit          -- checked, nock crash (like java Exception)
-  Fail          -- unchecked, representational exceptions 
-                              (Errors like out of memory, stack overflow)
 Edit
   with Object copying
   and tests
 Hint
+  Fast
+    test by jetting dec/add and running large mul
   Memo
     with One Big Guava Cache
     and tests
   Slog
     tests can capture logs right?
-  Fast
-    test by jetting dec/add and running large mul
   Stack Hints
 Wish
 
