--- a/language/TODO
+++ b/language/TODO
@@ -1,13 +1,14 @@
-Fast
-  test by jetting dec/add and running large mul
+NockClass containing shared info (battery for resolving arms, location, drivers,
+    etc) -- to be kept on NockObject. Better sharing. Objects keep at least a
+NockClass and a (lazy) FineCheck. FineCheck tells you whether another candidate
+core/object can grab a copy of your NockClass.
 
-Test CellMeta caching (w/edit)
+add Location objects to fine steps, check those before battery-and-fragment
 
-separate out a TailEdit so we don't have the if ( inTail ) thing
+we don't need a fine for edits, because location gives you enough information to
+answer editableAxis
 
-things that take Dashboard or Registry should probably take a ContextReference
-
-put transferToInterpreters in the various places where RegistrationNodes replace();
+kind of map that is one-thing-then-a-hashmap, for use in Registration
 
 REFLECTION
   We can't load user-supplied classes from the generated native images.
@@ -30,6 +31,13 @@ Transient, cacheable information about batteries -- this will be NockBattery
   sha
   last located core with fine check
   reference to dashboard assumption
+
+put transferToInterpreters in the various places where RegistrationNodes replace();
+
+Fast
+  test by jetting dec/add and running large mul
+
+Test CellMeta caching (w/edit)
 
 Memo
   with One Big Guava Cache
