--- a/language/pom.xml
+++ b/language/pom.xml
@@ -70,6 +70,11 @@
   </build>
   <dependencies>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>27.0-jre</version>
+    </dependency>
+    <dependency>
       <groupId>com.oracle.truffle</groupId>
       <artifactId>truffle-api</artifactId>
       <version>${graalvm.version}</version>
