--- a/language/TODO
+++ b/language/TODO
@@ -3,6 +3,8 @@ NockClass containing shared info (battery for resolving arms, location, drivers,
 NockClass and a (lazy) FineCheck. FineCheck tells you whether another candidate
 core/object can grab a copy of your NockClass.
 
+  Each battery has an "unlocated" class...
+
 add Location objects to fine steps, check those before battery-and-fragment
 
 we don't need a fine for edits, because location gives you enough information to
@@ -33,6 +35,8 @@ Transient, cacheable information about batteries -- this will be NockBattery
   reference to dashboard assumption
 
 put transferToInterpreters in the various places where RegistrationNodes replace();
+
+put NockFunctions in a cache instead of a map, don't depend on value equality
 
 Fast
   test by jetting dec/add and running large mul
