--- a/language/pom.xml
+++ b/language/pom.xml
@@ -44,6 +44,7 @@
               <artifactSet>
                 <excludes>
                   <exclude>junit:junit</exclude>
+                  <exclude>com.pholser:junit-quickcheck-core</exclude>
                   <exclude>org.graalvm.truffle:truffle-api</exclude>
                   <exclude>org.graalvm.truffle:truffle-dsl-processor</exclude>
                   <exclude>org.graalvm.truffle:truffle-tck</exclude>
@@ -94,7 +95,13 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.pholser</groupId>
+      <artifactId>junit-quickcheck-core</artifactId>
+      <version>0.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
