--- a/language/classnotes.txt
+++ b/language/classnotes.txt
@@ -1,6 +1,9 @@
 STEP 1:
   functions should come from the dashboard * check!
 
+STEP 2:
+  correct fields on NockClass
+
 currently we have a NockObject class that holds a reference to a NockClass
 object. Once upon a time it also held a reference to a core, but that sort of
 model is going away. It also cached a fine check, but our NockClass objects are
