Skeleton of separate Serf binary on the side.

--- a/language/pom.xml
+++ b/language/pom.xml
@@ -6,7 +6,9 @@
     <artifactId>jaque-parent</artifactId>
     <version>0.1-SNAPSHOT</version>
   </parent>
+  <groupId>net.frodwith</groupId>
   <artifactId>nock-language</artifactId>
+  <packaging>jar</packaging>
   <build>
     <plugins>
       <plugin>
