--- a/language/pom.xml
+++ b/language/pom.xml
@@ -66,6 +66,16 @@
               <directory>src/main/native</directory>
               <fileNames>
                 <fileName>jni.c</fileName>
+                <fileName>ed25519/add_scalar.c</fileName>
+                <fileName>ed25519/fe.c</fileName>
+                <fileName>ed25519/ge.c</fileName>
+                <fileName>ed25519/key_exchange.c</fileName>
+                <fileName>ed25519/keypair.c</fileName>
+                <fileName>ed25519/sc.c</fileName>
+                <fileName>ed25519/seed.c</fileName>
+                <fileName>ed25519/sha512.c</fileName>
+                <fileName>ed25519/sign.c</fileName>
+                <fileName>ed25519/verify.c</fileName>
               </fileNames>
             </source>
             <source>
