Import ge-additions and add stub implementations to jni.c
This adds the raw math library functions needed to implement ring
signature math, and JNI stubs for the jet functions which we'll
have to implement for jets.

--- a/language/pom.xml
+++ b/language/pom.xml
@@ -76,6 +76,7 @@
                 <fileName>ed25519/sha512.c</fileName>
                 <fileName>ed25519/sign.c</fileName>
                 <fileName>ed25519/verify.c</fileName>
+                <fileName>ge-additions/ge-additions.c</fileName>
               </fileNames>
             </source>
             <source>
