--- a/language/pom.xml
+++ b/language/pom.xml
@@ -170,10 +170,14 @@
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.1</version>
+          <version>3.8.1</version>
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
+            <!--
+            <proc>none</proc>
+            <verbose>true</verbose>
+            -->
           </configuration>
         </plugin>
       </plugins>
